# Stock-Market-Analysis-w-Warren-Buffet-Bot

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.claude/hooks/: session-start.sh
.claude/skills/deploy/: SKILL.md
.claude/skills/run/: SKILL.md
.github/workflows/: deploy.yml  diagnose.yml  restart-caddy.yml  run-now.yml  status.yml  weekly.yml
config/: briefing_sources.yaml  settings.yaml  universe_adrs.txt  universe_international.txt  universe_us.txt  watchlist.txt
deploy/: Caddy.Dockerfile  Caddyfile  build-index.sh  crontab  entrypoint.sh
src/warren_bot/: cli.py  config.py  pipeline.py  recommendations.py  util_refresh_sp500.py  util_refresh_us_universe.py
src/warren_bot/analysis/: growth.py  ratios.py  scorer.py  statement_utils.py  valuation.py
src/warren_bot/dashboard/: render.py
src/warren_bot/data/: cache.py  enrich.py  fetcher.py  merge.py  schema.py
src/warren_bot/data/adapters/: __init__.py  _http.py  (+4 more)
src/warren_bot/delivery/: email_render.py  email_send.py  notion_sync.py
src/warren_bot/hedge_funds/: dataroma.py
src/warren_bot/news/: briefing.py  stock_news.py
src/warren_bot/thesis/: generator.py
tests/: conftest.py  test_accuracy_fixes.py  test_briefing.py  test_cache.py  test_config.py  test_dashboard_render.py  test_dataroma_parse.py  test_dataroma_scrape.py  test_delivery.py  test_fetcher_transient.py  test_finnhub_adapter.py  test_fmp_adapter.py  test_multisource.py  test_pipeline.py  test_recommendations.py  test_scorer.py  test_statement_utils.py
