[project]
name = "warren-bot"
version = "0.1.0"
description = "Warren Buffett / Berkshire Hathaway stock screening bot"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "numpy>=1.26",
    "click>=8.1",
    "jinja2>=3.1",
    "markupsafe>=2.1",
    "pyyaml>=6.0",
    "requests>=2.32",
    "notion-client>=2.2",
    "tenacity>=9.0",
    "lxml>=5.3",
    "beautifulsoup4>=4.12",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-vcr>=1.0",
    "ruff>=0.7",
]

[project.scripts]
warren-bot = "warren_bot.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warren_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:dateutil.*",
    "ignore::DeprecationWarning:pandas.*",
]
